k8s/apps/internal/dozzle/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle-oauth2-proxy
  namespace: dozzle
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4180
  selector:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: dozzle
